--- a/index.html
+++ b/index.html
@@ -1,64 +1,74 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Taller de Astronomía (FISI1914) by forero</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Taller de Astronomía (FISI1914) : (AKA astrolunch)" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <title>Taller de Astronomía (FISI1914)</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Taller de Astronomía (FISI1914)</h1>
-        <p>(AKA astrolunch)</p>
-        <p class="view"><a href="https://github.com/forero/TallerAstronomia">View the Project on GitHub <small>forero/TallerAstronomia</small></a></p>
-        <ul>
-          <li><a href="https://github.com/forero/TallerAstronomia/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/forero/TallerAstronomia/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/forero/TallerAstronomia">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a name="taller" class="anchor" href="#taller"><span class="octicon octicon-link"></span></a>Taller</h3>
 
-<p>El Taller de Astronomía es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. Hablamos de noticias astronómicas, desarrollamos pequeños proyectos y compartimos la hora del almuerzo (de ahí que también se conozca como astrolunch). </p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/forero/TallerAstronomia">View on GitHub</a>
 
-<h3>
-<a name="formalidades" class="anchor" href="#formalidades"><span class="octicon octicon-link"></span></a>Formalidades</h3>
+          <h1 id="project_title">Taller de Astronomía (FISI1914)</h1>
+          <h2 id="project_tagline">(AKA astrolunch)</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/forero/TallerAstronomia/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/forero/TallerAstronomia/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h2>
+<a name="taller" class="anchor" href="#taller"><span class="octicon octicon-link"></span></a>Taller</h2>
+
+<p>El Taller de Astronomía es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. Hablamos de noticias astronómicas, vemos charlas de invitados. desarrollamos pequeños proyectos y presentamos de una manera accesible a un público general diferentes investigaciones recientes. </p>
+
+<p>Todos esto lo hacemos mientras comemos juntos, de ahí que también se conozca como astrolunch.  No olviden traer su comida y cosas para compartir.</p>
+
+<h2>
+<a name="formalidades" class="anchor" href="#formalidades"><span class="octicon octicon-link"></span></a>Formalidades</h2>
 
 <p>El Taller de Astronomía es una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale (1) crédito. La evaluación se divide así: 30% por asistencia y participación en clase, 30% por dar una charla y 40% por presentar en un poster los resultados de un proyecto desarrollado durante el semesntre.</p>
 
-<h3>
-<a name="programa" class="anchor" href="#programa"><span class="octicon octicon-link"></span></a>Programa</h3>
-
-<h1>
-<a name="semana-1-agosto-1" class="anchor" href="#semana-1-agosto-1"><span class="octicon octicon-link"></span></a>(Semana 1) Agosto 1</h1>
-
-<p>*</p>
-
-<h1>
-<a name="semana-2-agosto-8" class="anchor" href="#semana-2-agosto-8"><span class="octicon octicon-link"></span></a>(Semana 2) Agosto 8</h1>
+<h2>
+<a name="programa" class="anchor" href="#programa"><span class="octicon octicon-link"></span></a>Programa</h2>
 
 <h3>
+<a name="semana-1-agosto-1" class="anchor" href="#semana-1-agosto-1"><span class="octicon octicon-link"></span></a>(Semana 1) Agosto 1</h3>
+
+<ul>
+<li>(<em>Entrée</em>) Jaime E. Forero-Romero. ¿Cómo funciona astrolunch?</li>
+<li>Juan Nicolás Garavito. Galaxias y el Papa Francisco.</li>
+<li>(<em>Dessert</em>) Jaime E. Forero-Romero. Haciendo amigos en Heidelberg y Tallin.</li>
+</ul><h3>
 <a name="contacto" class="anchor" href="#contacto"><span class="octicon octicon-link"></span></a>Contacto</h3>
 
 <p>El Taller de Astronomía en el 2014-20 será liderado por Jaime E. Forero-Romero. Email: je.forero.</p>
       </section>
     </div>
-    <footer>
-      <p>Project maintained by <a href="https://github.com/forero">forero</a></p>
-      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
-    </footer>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Taller de Astronomía (FISI1914) maintained by <a href="https://github.com/forero">forero</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
+
     
+
   </body>
 </html>
