--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Taller de Astronomía (FISI1914) : (AKA astrolunch)" />
+    <meta name="description" content="Astrolunch : (Taller de Astronomía - FISI1914)" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Taller de Astronomía (FISI1914)</title>
+    <title>Astrolunch</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/forero/TallerAstronomia">View on GitHub</a>
 
-          <h1 id="project_title">Taller de Astronomía (FISI1914)</h1>
-          <h2 id="project_tagline">(AKA astrolunch)</h2>
+          <h1 id="project_title">Astrolunch</h1>
+          <h2 id="project_tagline">(Taller de Astronomía - FISI1914)</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/forero/TallerAstronomia/zipball/master">Download this project as a .zip file</a>
@@ -32,16 +32,18 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h2>
-<a name="taller" class="anchor" href="#taller"><span class="octicon octicon-link"></span></a>Taller</h2>
+<a name="astrolunch" class="anchor" href="#astrolunch"><span class="octicon octicon-link"></span></a>Astrolunch</h2>
 
-<p>El Taller de Astronomía es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. Hablamos de noticias astronómicas, vemos charlas de invitados. desarrollamos pequeños proyectos y presentamos de una manera accesible a un público general diferentes investigaciones recientes. </p>
+<p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. </p>
 
-<p>Todos esto lo hacemos mientras comemos juntos, de ahí que también se conozca como astrolunch.  No olviden traer su comida y cosas para compartir.</p>
+<p>Hablamos de noticias astronómicas, vemos charlas de invitados y desarrollamos pequeños proyectos. Siempre procuramos presentar de una manera accesible a un público general los temas actuales de investigación.</p>
+
+<p>Todos esto lo hacemos mientras comemos juntos, de ahí que es astrolunch.  No olviden traer su comida y cosas para compartir.</p>
 
 <h2>
 <a name="formalidades" class="anchor" href="#formalidades"><span class="octicon octicon-link"></span></a>Formalidades</h2>
 
-<p>El Taller de Astronomía es una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale (1) crédito. La evaluación se divide así: 30% por asistencia y participación en clase, 30% por dar una charla y 40% por presentar en un poster los resultados de un proyecto desarrollado durante el semesntre.</p>
+<p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale (1) crédito. La evaluación se divide así: 30% por asistencia y participación en clase, 30% por dar una charla y 40% por presentar en un poster los resultados de un proyecto desarrollado durante el semesntre.</p>
 
 <h2>
 <a name="programa" class="anchor" href="#programa"><span class="octicon octicon-link"></span></a>Programa</h2>
@@ -63,7 +65,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Taller de Astronomía (FISI1914) maintained by <a href="https://github.com/forero">forero</a></p>
+        <p class="copyright">Astrolunch maintained by <a href="https://github.com/forero">forero</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
