Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,21 +41,23 @@
 <p>Todos esto lo hacemos mientras comemos juntos, de ahí que es astrolunch.  No olviden traer su comida y cosas para compartir.</p>
 
 <h2>
-<a name="formalidades" class="anchor" href="#formalidades"><span class="octicon octicon-link"></span></a>Formalidades</h2>
-
-<p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale (1) crédito. La evaluación se divide así: 30% por asistencia y participación en clase, 30% por dar una charla y 40% por presentar en un poster los resultados de un proyecto desarrollado durante el semesntre.</p>
-
-<h2>
 <a name="programa" class="anchor" href="#programa"><span class="octicon octicon-link"></span></a>Programa</h2>
 
 <h3>
 <a name="semana-1-agosto-1" class="anchor" href="#semana-1-agosto-1"><span class="octicon octicon-link"></span></a>(Semana 1) Agosto 1</h3>
 
 <ul>
-<li>(<em>Entrée</em>) Jaime E. Forero-Romero. ¿Cómo funciona astrolunch?</li>
-<li>Juan Nicolás Garavito. Galaxias y el Papa Francisco.</li>
-<li>(<em>Dessert</em>) Jaime E. Forero-Romero. Haciendo amigos en Heidelberg y Tallin.</li>
-</ul><h3>
+<li>
+<em>Entrée</em>. Jaime E. Forero-Romero. ¿Cómo funciona astrolunch?</li>
+<li>Juan Nicolás Garavito. Galaxias distantes y el Papa Francisco.</li>
+<li>
+<em>Dessert</em>. Jaime E. Forero-Romero. Haciendo amigos en Heidelberg y Tallin.</li>
+</ul><h2>
+<a name="formalidades" class="anchor" href="#formalidades"><span class="octicon octicon-link"></span></a>Formalidades</h2>
+
+<p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale (1) crédito. La evaluación se divide así: 30% por asistencia y participación en clase, 30% por dar una charla y 40% por presentar en un poster los resultados de un proyecto desarrollado durante el semestre.</p>
+
+<h3>
 <a name="contacto" class="anchor" href="#contacto"><span class="octicon octicon-link"></span></a>Contacto</h3>
 
 <p>El Taller de Astronomía en el 2014-20 será liderado por Jaime E. Forero-Romero. Email: je.forero.</p>
