Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
 
 <p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. </p>
 
-<p>Hablamos de noticias astronómicas, vemos charlas de invitados y desarrollamos pequeños proyectos. Siempre procuramos presentar de una manera accesible a un público general los temas actuales de investigación.</p>
+<p>Hablamos de noticias astronómicas, vemos charlas de invitados y desarrollamos pequeños proyectos. Siempre procuramos presentar temas actuales de investigación de una manera accesible a un público con formación no especializada en astronomía (desde estudiantes de primer semetre de matemáticas hasta profesores en química, pasando por estudiantes de doctorado en biología).</p>
 
-<p>Todos esto lo hacemos mientras comemos juntos, de ahí que es astrolunch.  No olviden traer su comida y cosas para compartir.</p>
+<p>Todos esto lo hacemos mientras comemos juntos, de ahí el nombre <strong>astrolunch</strong>.  </p>
+
+<p>Asi que bienvenidos y ¡No olviden traer comida y cosas para compartir!</p>
 
 <h2>
 <a name="programa" class="anchor" href="#programa"><span class="octicon octicon-link"></span></a>Programa</h2>
