Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <p>Todos esto lo hacemos mientras comemos juntos, de ahí el nombre <strong>astrolunch</strong>.  </p>
 
-<p>Asi que bienvenidos y ¡No olviden traer comida y cosas para compartir!</p>
+<p>Asi que bienvenidos y ¡no olviden traer comida y cosas para compartir!</p>
 
 <h2>
 <a name="programa" class="anchor" href="#programa"><span class="octicon octicon-link"></span></a>Programa</h2>
