Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <ul>
 <li>
 <em>Entrée</em>. Jaime E. Forero-Romero. ¿Cómo funciona astrolunch?</li>
-<li>Juan Nicolás Garavito. Galaxias distantes y el Papa Francisco.</li>
+<li>Juan Nicolás Garavito. Galaxias y el Vaticano.</li>
 <li>
 <em>Dessert</em>. Jaime E. Forero-Romero. Haciendo amigos en Heidelberg y Tallin.</li>
 </ul><h2>
