--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 <li>Juan Nicolás Garavito. Galaxias y el Vaticano.</li>
 <li>
 <em>Dessert</em>. Jaime E. Forero-Romero. Haciendo amigos en Heidelberg y Tallin.</li>
-</ul><h2>
+</ul><p>Escuela de Astronomía Observacional para Estudiantes Latinoamericanos - ESAOBELA 2015. <a href="http://www.astroscu.unam.mx/cursos/esaobela/">Inscripciones abiertas</a></p>
+
+<h2>
 <a name="formalidades" class="anchor" href="#formalidades"><span class="octicon octicon-link"></span></a>Formalidades</h2>
 
 <p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale (1) crédito. La evaluación se divide así: 30% por asistencia y participación en clase, 30% por dar una charla y 40% por presentar en un poster los resultados de un proyecto desarrollado durante el semestre.</p>
