Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2>
 <a name="astrolunch" class="anchor" href="#astrolunch"><span class="octicon octicon-link"></span></a>Astrolunch</h2>
 
-<p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. </p>
+<p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. El lugar de reunión es el <strong>Lleras 201</strong> los viernes de 1PM a 1:50PM.</p>
 
 <p>Hablamos de noticias astronómicas, vemos charlas de invitados y desarrollamos pequeños proyectos. Siempre procuramos presentar temas actuales de investigación de una manera accesible a un público con formación no especializada en astronomía (desde estudiantes de primer semetre de matemáticas hasta profesores en química, pasando por estudiantes de doctorado en biología).</p>
 
@@ -49,11 +49,9 @@
 <a name="semana-1-agosto-1" class="anchor" href="#semana-1-agosto-1"><span class="octicon octicon-link"></span></a>(Semana 1) Agosto 1</h3>
 
 <ul>
-<li>
-<em>Entrée</em>. Jaime E. Forero-Romero. ¿Cómo funciona astrolunch?</li>
+<li>Jaime E. Forero-Romero. ¿Cómo funciona astrolunch?</li>
 <li>Juan Nicolás Garavito. Galaxias y el Vaticano.</li>
-<li>
-<em>Dessert</em>. Jaime E. Forero-Romero. Haciendo amigos en Heidelberg y Tallin.</li>
+<li>Jaime E. Forero-Romero. Haciendo amigos en Heidelberg y Tallin.</li>
 </ul><p>Escuela de Astronomía Observacional para Estudiantes Latinoamericanos - ESAOBELA 2015. <a href="http://www.astroscu.unam.mx/cursos/esaobela/">Inscripciones abiertas</a></p>
 
 <h2>
