Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 <h2>
 <a name="formalidades" class="anchor" href="#formalidades"><span class="octicon octicon-link"></span></a>Formalidades</h2>
 
-<p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale (1) crédito. La evaluación se divide así: 30% por asistencia y participación en clase, 30% por dar una charla y 40% por presentar en un poster los resultados de un proyecto desarrollado durante el semestre.</p>
+<p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale un (1) crédito. La evaluación se divide así: 30% por asistencia y participación en clase, 30% por dar una charla y 40% por presentar en un poster los resultados de un proyecto desarrollado durante el semestre.</p>
 
 <h3>
 <a name="contacto" class="anchor" href="#contacto"><span class="octicon octicon-link"></span></a>Contacto</h3>
