--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 
   <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Astrolunch : (Taller de Astronomía - FISI1914)" />
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Astrolunch : (Taller de Astronomía - FISI1914)">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -52,7 +52,57 @@
 <li>Jaime E. Forero-Romero. ¿Cómo funciona astrolunch?</li>
 <li>Juan Nicolás Garavito. Galaxias y el Vaticano.</li>
 <li>Jaime E. Forero-Romero. Haciendo amigos en Heidelberg y Tallin.</li>
-</ul><p>Escuela de Astronomía Observacional para Estudiantes Latinoamericanos - ESAOBELA 2015. <a href="http://www.astroscu.unam.mx/cursos/esaobela/">Inscripciones abiertas</a></p>
+</ul><h3>
+<a name="semana-2-agosto-8" class="anchor" href="#semana-2-agosto-8"><span class="octicon octicon-link"></span></a>(Semana 2) Agosto 8</h3>
+
+<h3>
+<a name="semana-3-agosto-15" class="anchor" href="#semana-3-agosto-15"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 15</h3>
+
+<p>*</p>
+
+<ul>
+<li>Susana Simancas. 
+*
+### (Semana 4) Agosto 22</li>
+</ul><h3>
+<a name="semana-5-agosto-29" class="anchor" href="#semana-5-agosto-29"><span class="octicon octicon-link"></span></a>(Semana 5) Agosto 29</h3>
+
+<h3>
+<a name="semana-6-septiembre-5" class="anchor" href="#semana-6-septiembre-5"><span class="octicon octicon-link"></span></a>(Semana 6) Septiembre 5</h3>
+
+<h3>
+<a name="semana-7-septiembre-12" class="anchor" href="#semana-7-septiembre-12"><span class="octicon octicon-link"></span></a>(Semana 7) Septiembre 12</h3>
+
+<h3>
+<a name="semana-8-septiembre-19" class="anchor" href="#semana-8-septiembre-19"><span class="octicon octicon-link"></span></a>(Semana 8) Septiembre 19</h3>
+
+<h3>
+<a name="semana-9-septiembre-26" class="anchor" href="#semana-9-septiembre-26"><span class="octicon octicon-link"></span></a>(Semana 9) Septiembre 26</h3>
+
+<p><strong>Semana de trabajo individual</strong></p>
+
+<h3>
+<a name="semana-10-octubre-3" class="anchor" href="#semana-10-octubre-3"><span class="octicon octicon-link"></span></a>(Semana 10) Octubre 3</h3>
+
+<h3>
+<a name="semana-11-octubre-10" class="anchor" href="#semana-11-octubre-10"><span class="octicon octicon-link"></span></a>(Semana 11) Octubre 10</h3>
+
+<h3>
+<a name="semana-12-octubre-17" class="anchor" href="#semana-12-octubre-17"><span class="octicon octicon-link"></span></a>(Semana 12) Octubre 17</h3>
+
+<h3>
+<a name="semana-13-octubre-24" class="anchor" href="#semana-13-octubre-24"><span class="octicon octicon-link"></span></a>(Semana 13) Octubre 24</h3>
+
+<h3>
+<a name="semana-14-octubre-31" class="anchor" href="#semana-14-octubre-31"><span class="octicon octicon-link"></span></a>(Semana 14) Octubre 31</h3>
+
+<h3>
+<a name="semana-15-noviembre-7" class="anchor" href="#semana-15-noviembre-7"><span class="octicon octicon-link"></span></a>(Semana 15) Noviembre 7</h3>
+
+<h3>
+<a name="semana-16-noviembre-14" class="anchor" href="#semana-16-noviembre-14"><span class="octicon octicon-link"></span></a>(Semana 16) Noviembre 14</h3>
+
+<p>Escuela de Astronomía Observacional para Estudiantes Latinoamericanos - ESAOBELA 2015. <a href="http://www.astroscu.unam.mx/cursos/esaobela/">Inscripciones abiertas</a></p>
 
 <h2>
 <a name="formalidades" class="anchor" href="#formalidades"><span class="octicon octicon-link"></span></a>Formalidades</h2>
