--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
 <h3>
 <a name="semana-3-agosto-15" class="anchor" href="#semana-3-agosto-15"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 15</h3>
 
-<p>*</p>
-
 <ul>
 <li>Susana Simancas. 
-*
-### (Semana 4) Agosto 22</li>
+*</li>
 </ul><h3>
+<a name="semana-4-agosto-22" class="anchor" href="#semana-4-agosto-22"><span class="octicon octicon-link"></span></a>(Semana 4) Agosto 22</h3>
+
+<h3>
 <a name="semana-5-agosto-29" class="anchor" href="#semana-5-agosto-29"><span class="octicon octicon-link"></span></a>(Semana 5) Agosto 29</h3>
 
 <h3>
