--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
 <li>Jaime E. Forero-Romero. ¿Cómo funciona astrolunch?</li>
 <li>Juan Nicolás Garavito. Galaxias y el Vaticano.</li>
 <li>Jaime E. Forero-Romero. Haciendo amigos en Heidelberg y Tallin.</li>
+</ul><p>Enlaces:</p>
+
+<ul>
+<li>Escuela de Astronomía Observacional para Estudiantes Latinoamericanos - ESAOBELA 2015. <a href="http://www.astroscu.unam.mx/cursos/esaobela/">Inscripciones abiertas</a>
+</li>
 </ul><h3>
 <a name="semana-2-agosto-8" class="anchor" href="#semana-2-agosto-8"><span class="octicon octicon-link"></span></a>(Semana 2) Agosto 8</h3>
 
@@ -59,8 +64,8 @@
 <a name="semana-3-agosto-15" class="anchor" href="#semana-3-agosto-15"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 15</h3>
 
 <ul>
-<li>Susana Simancas. 
-*</li>
+<li>Susana Simancas. </li>
+<li>NN</li>
 </ul><h3>
 <a name="semana-4-agosto-22" class="anchor" href="#semana-4-agosto-22"><span class="octicon octicon-link"></span></a>(Semana 4) Agosto 22</h3>
 
@@ -101,8 +106,6 @@
 
 <h3>
 <a name="semana-16-noviembre-14" class="anchor" href="#semana-16-noviembre-14"><span class="octicon octicon-link"></span></a>(Semana 16) Noviembre 14</h3>
-
-<p>Escuela de Astronomía Observacional para Estudiantes Latinoamericanos - ESAOBELA 2015. <a href="http://www.astroscu.unam.mx/cursos/esaobela/">Inscripciones abiertas</a></p>
 
 <h2>
 <a name="formalidades" class="anchor" href="#formalidades"><span class="octicon octicon-link"></span></a>Formalidades</h2>
