--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 <h3>
 <a name="semana-16-noviembre-14" class="anchor" href="#semana-16-noviembre-14"><span class="octicon octicon-link"></span></a>(Semana 16) Noviembre 14</h3>
 
+<p><strong>Sesión de presentación de los posters</strong></p>
+
 <h2>
 <a name="formalidades" class="anchor" href="#formalidades"><span class="octicon octicon-link"></span></a>Formalidades</h2>
 
