Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
 <p>Asi que bienvenidos y ¡no olviden traer comida y cosas para compartir!</p>
 
 <h2>
+<a name="proyectos" class="anchor" href="#proyectos"><span class="octicon octicon-link"></span></a>Proyectos</h2>
+
+<p>Esta es la lista de proyectos disponibles: <a href="https://github.com/forero/TallerAstronomia/blob/master/projects/201420/projects.md">click</a>.</p>
+
+<h2>
 <a name="programa" class="anchor" href="#programa"><span class="octicon octicon-link"></span></a>Programa</h2>
 
 <h3>
@@ -60,12 +65,15 @@
 </ul><h3>
 <a name="semana-2-agosto-8" class="anchor" href="#semana-2-agosto-8"><span class="octicon octicon-link"></span></a>(Semana 2) Agosto 8</h3>
 
-<h3>
+<ul>
+<li>Jaime E. Forero-Romero.</li>
+<li>Felipe Gómez. </li>
+</ul><h3>
 <a name="semana-3-agosto-15" class="anchor" href="#semana-3-agosto-15"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 15</h3>
 
 <ul>
 <li>Susana Simancas. </li>
-<li>NN</li>
+<li>Manuel Quiroga. </li>
 </ul><h3>
 <a name="semana-4-agosto-22" class="anchor" href="#semana-4-agosto-22"><span class="octicon octicon-link"></span></a>(Semana 4) Agosto 22</h3>
 
