--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 <a name="semana-2-agosto-8" class="anchor" href="#semana-2-agosto-8"><span class="octicon octicon-link"></span></a>(Semana 2) Agosto 8</h3>
 
 <ul>
-<li>Jaime E. Forero-Romero.</li>
-<li>Felipe Gómez. </li>
+<li>Jaime E. Forero-Romero. Arte y Astronomía.</li>
+<li>Felipe Gómez. Cosmología y Galaxias en Madrid.</li>
 </ul><h3>
 <a name="semana-3-agosto-15" class="anchor" href="#semana-3-agosto-15"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 15</h3>
 
