--- a/index.html
+++ b/index.html
@@ -54,13 +54,10 @@
 <a name="semana-1-agosto-1" class="anchor" href="#semana-1-agosto-1"><span class="octicon octicon-link"></span></a>(Semana 1) Agosto 1</h3>
 
 <ul>
-<li>Jaime E. Forero-Romero. ¿Cómo funciona astrolunch?</li>
+<li>Jaime E. Forero-Romero. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201420/ForeroRomero_intro.pdf?raw=true">¿Cómo funciona astrolunch?</a>
+</li>
 <li>Juan Nicolás Garavito. Galaxias y el Vaticano.</li>
-<li>Jaime E. Forero-Romero. Haciendo amigos en Heidelberg y Tallin.</li>
-</ul><p>Enlaces:</p>
-
-<ul>
-<li>Escuela de Astronomía Observacional para Estudiantes Latinoamericanos - ESAOBELA 2015. <a href="http://www.astroscu.unam.mx/cursos/esaobela/">Inscripciones abiertas</a>
+<li>Jaime E. Forero-Romero. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201420/ForeroRomero_heidelberg_tallin.pdf?raw=true">Haciendo amigos en Heidelberg y Tallin</a>
 </li>
 </ul><h3>
 <a name="semana-2-agosto-8" class="anchor" href="#semana-2-agosto-8"><span class="octicon octicon-link"></span></a>(Semana 2) Agosto 8</h3>
@@ -68,6 +65,11 @@
 <ul>
 <li>Jaime E. Forero-Romero. Arte y Astronomía.</li>
 <li>Felipe Gómez. Cosmología y Galaxias en Madrid.</li>
+</ul><p>Enlaces:</p>
+
+<ul>
+<li>Escuela de Astronomía Observacional para Estudiantes Latinoamericanos - ESAOBELA 2015. <a href="http://www.astroscu.unam.mx/cursos/esaobela/">Inscripciones abiertas</a>
+</li>
 </ul><h3>
 <a name="semana-3-agosto-15" class="anchor" href="#semana-3-agosto-15"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 15</h3>
 
