--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
 </ul><h3>
 <a name="semana-4-agosto-22" class="anchor" href="#semana-4-agosto-22"><span class="octicon octicon-link"></span></a>(Semana 4) Agosto 22</h3>
 
-<h3>
+<ul>
+<li>Diego Umaña. Supernova 2014J: cálculo de la distancia a M82 y crónica de una imagen única en Colombia.</li>
+<li>
+</li>
+</ul><h3>
 <a name="semana-5-agosto-29" class="anchor" href="#semana-5-agosto-29"><span class="octicon octicon-link"></span></a>(Semana 5) Agosto 29</h3>
 
 <h3>
