Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
 
 <ul>
 <li>Diego Umaña. Supernova 2014J: cálculo de la distancia a M82 y crónica de una imagen única en Colombia.</li>
-<li>
-</li>
+<li>Jaime E. Forero-Romero. Fuentes de información para jóvenes astrónomos.</li>
 </ul><h3>
 <a name="semana-5-agosto-29" class="anchor" href="#semana-5-agosto-29"><span class="octicon octicon-link"></span></a>(Semana 5) Agosto 29</h3>
 
