Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -65,11 +65,6 @@
 <ul>
 <li>Jaime E. Forero-Romero. Arte y Astronomía.</li>
 <li>Felipe Gómez. Cosmología y Galaxias en Madrid.</li>
-</ul><p>Enlaces:</p>
-
-<ul>
-<li>Escuela de Astronomía Observacional para Estudiantes Latinoamericanos - ESAOBELA 2015. <a href="http://www.astroscu.unam.mx/cursos/esaobela/">Inscripciones abiertas</a>
-</li>
 </ul><h3>
 <a name="semana-3-agosto-15" class="anchor" href="#semana-3-agosto-15"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 15</h3>
 
@@ -122,6 +117,14 @@
 <p><strong>Sesión de presentación de los posters</strong></p>
 
 <h2>
+<a name="enlaces" class="anchor" href="#enlaces"><span class="octicon octicon-link"></span></a>Enlaces</h2>
+
+<ul>
+<li>Escuela de Astronomía Observacional para Estudiantes Latinoamericanos - ESAOBELA 2015. <a href="http://www.astroscu.unam.mx/cursos/esaobela/">Inscripciones abiertas</a>
+</li>
+<li>Consejos para dar presentaciones <a href="http://www.astro.caltech.edu/%7Ejlc/ay141_winter2009/index.html">Journal Club @ Caltech</a>
+</li>
+</ul><h2>
 <a name="formalidades" class="anchor" href="#formalidades"><span class="octicon octicon-link"></span></a>Formalidades</h2>
 
 <p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale un (1) crédito. La evaluación se divide así: 30% por asistencia y participación en clase, 30% por dar una charla y 40% por presentar en un poster los resultados de un proyecto desarrollado durante el semestre.</p>
