Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -79,16 +79,29 @@
 </ul><h3>
 <a name="semana-5-agosto-29" class="anchor" href="#semana-5-agosto-29"><span class="octicon octicon-link"></span></a>(Semana 5) Agosto 29</h3>
 
-<h3>
+<ul>
+<li>Diana Meléndez</li>
+<li>Juan Sebastián Barbosa</li>
+</ul><h3>
 <a name="semana-6-septiembre-5" class="anchor" href="#semana-6-septiembre-5"><span class="octicon octicon-link"></span></a>(Semana 6) Septiembre 5</h3>
 
-<h3>
+<ul>
+<li>Juan Sebastián Prada</li>
+<li>Juan Jose Flórez</li>
+</ul><h3>
 <a name="semana-7-septiembre-12" class="anchor" href="#semana-7-septiembre-12"><span class="octicon octicon-link"></span></a>(Semana 7) Septiembre 12</h3>
 
-<h3>
+<ul>
+<li>Luisa Fernanda Rodríquez</li>
+<li>Andrea Buitrago</li>
+</ul><h3>
 <a name="semana-8-septiembre-19" class="anchor" href="#semana-8-septiembre-19"><span class="octicon octicon-link"></span></a>(Semana 8) Septiembre 19</h3>
 
-<h3>
+<ul>
+<li>Lina Marcela Aragón</li>
+<li>Esteban Pardo</li>
+<li>Paul William Díaz</li>
+</ul><h3>
 <a name="semana-9-septiembre-26" class="anchor" href="#semana-9-septiembre-26"><span class="octicon octicon-link"></span></a>(Semana 9) Septiembre 26</h3>
 
 <p><strong>Semana de trabajo individual</strong></p>
@@ -96,22 +109,42 @@
 <h3>
 <a name="semana-10-octubre-3" class="anchor" href="#semana-10-octubre-3"><span class="octicon octicon-link"></span></a>(Semana 10) Octubre 3</h3>
 
-<h3>
+<ul>
+<li>Ana María MOnes </li>
+<li>Nicolás Plaza Bermúdez</li>
+<li>Ray Díaz</li>
+</ul><h3>
 <a name="semana-11-octubre-10" class="anchor" href="#semana-11-octubre-10"><span class="octicon octicon-link"></span></a>(Semana 11) Octubre 10</h3>
 
-<h3>
+<ul>
+<li>Andrés Peñaranda</li>
+<li>Andrés Gaona</li>
+</ul><h3>
 <a name="semana-12-octubre-17" class="anchor" href="#semana-12-octubre-17"><span class="octicon octicon-link"></span></a>(Semana 12) Octubre 17</h3>
 
-<h3>
+<ul>
+<li>Juan David Araujo</li>
+<li>Oscar Núñez Rincón</li>
+</ul><h3>
 <a name="semana-13-octubre-24" class="anchor" href="#semana-13-octubre-24"><span class="octicon octicon-link"></span></a>(Semana 13) Octubre 24</h3>
 
-<h3>
+<ul>
+<li>Andrés Davida Naranjo</li>
+<li>Luisa Prado</li>
+</ul><h3>
 <a name="semana-14-octubre-31" class="anchor" href="#semana-14-octubre-31"><span class="octicon octicon-link"></span></a>(Semana 14) Octubre 31</h3>
 
-<h3>
+<ul>
+<li>Andrés Mantilla</li>
+<li>Laura Ruíz</li>
+</ul><h3>
 <a name="semana-15-noviembre-7" class="anchor" href="#semana-15-noviembre-7"><span class="octicon octicon-link"></span></a>(Semana 15) Noviembre 7</h3>
 
-<h3>
+<ul>
+<li>Santiago Saldarriaga</li>
+<li>David Alejandro Henríquez</li>
+<li>Tania Cifuentes</li>
+</ul><h3>
 <a name="semana-16-noviembre-14" class="anchor" href="#semana-16-noviembre-14"><span class="octicon octicon-link"></span></a>(Semana 16) Noviembre 14</h3>
 
 <p><strong>Sesión de presentación de los posters</strong></p>
