Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2>
 <a name="astrolunch" class="anchor" href="#astrolunch"><span class="octicon octicon-link"></span></a>Astrolunch</h2>
 
-<p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. El lugar de reunión es el <strong>Lleras 201</strong> los viernes de 1PM a 1:50PM.</p>
+<p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. El lugar de reunión es el <strong>ML508</strong> los viernes de 1PM a 1:50PM.</p>
 
 <p>Hablamos de noticias astronómicas, vemos charlas de invitados y desarrollamos pequeños proyectos. Siempre procuramos presentar temas actuales de investigación de una manera accesible a un público con formación no especializada en astronomía (desde estudiantes de primer semetre de matemáticas hasta profesores en química, pasando por estudiantes de doctorado en biología).</p>
 
