--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
 <a name="semana-5-agosto-29" class="anchor" href="#semana-5-agosto-29"><span class="octicon octicon-link"></span></a>(Semana 5) Agosto 29</h3>
 
 <ul>
-<li>Diana Meléndez</li>
-<li>Juan Sebastián Barbosa</li>
+<li>Diana Meléndez. Formación de sistemas planetarios: primeras etapas y teorías. </li>
+<li>Juan Sebastián Barbosa. Binarias Espectroscópicas (Delta Capricornio).</li>
 </ul><h3>
 <a name="semana-6-septiembre-5" class="anchor" href="#semana-6-septiembre-5"><span class="octicon octicon-link"></span></a>(Semana 6) Septiembre 5</h3>
 
