Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -86,13 +86,14 @@
 <a name="semana-6-septiembre-5" class="anchor" href="#semana-6-septiembre-5"><span class="octicon octicon-link"></span></a>(Semana 6) Septiembre 5</h3>
 
 <ul>
+<li>Benjamin Oostra. Observaciones de la estrella AB Aurigae</li>
 <li>Juan Sebastián Prada</li>
 <li>Juan Jose Flórez</li>
 </ul><h3>
 <a name="semana-7-septiembre-12" class="anchor" href="#semana-7-septiembre-12"><span class="octicon octicon-link"></span></a>(Semana 7) Septiembre 12</h3>
 
 <ul>
-<li>Luisa Fernanda Rodríquez</li>
+<li>Luisa Fernanda Rodríquez. Descubrimiento de una estrella marrón.</li>
 <li>Andrea Buitrago</li>
 </ul><h3>
 <a name="semana-8-septiembre-19" class="anchor" href="#semana-8-septiembre-19"><span class="octicon octicon-link"></span></a>(Semana 8) Septiembre 19</h3>
