--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 <a name="semana-3-agosto-15" class="anchor" href="#semana-3-agosto-15"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 15</h3>
 
 <ul>
-<li>Susana Simancas. Space Worms! Proyecto Uniandino Aeroespacial - PUA</li>
+<li>Susana Simancas. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201420/Simancas_20140815.pdf?raw=true">Space Worms! Proyecto Uniandino Aeroespacial - PUA</a>
+</li>
 <li>Manuel Quiroga. Misión espacial bonaventuriana.</li>
 </ul><h3>
 <a name="semana-4-agosto-22" class="anchor" href="#semana-4-agosto-22"><span class="octicon octicon-link"></span></a>(Semana 4) Agosto 22</h3>
