--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 
 <ul>
 <li>Benjamin Oostra. Observaciones de la estrella AB Aurigae</li>
-<li>Juan Sebastián Prada</li>
-<li>Juan Jose Flórez</li>
+<li>Juan Sebastián Prada.</li>
+<li>Juan Jose Flórez. </li>
 </ul><h3>
 <a name="semana-7-septiembre-12" class="anchor" href="#semana-7-septiembre-12"><span class="octicon octicon-link"></span></a>(Semana 7) Septiembre 12</h3>
 
 <ul>
 <li>Luisa Fernanda Rodríquez. Descubrimiento de una estrella marrón.</li>
-<li>Andrea Buitrago</li>
+<li>Andrea Buitrago. El violento nacimiento de las Estrellas de Neutrones: Una historia de explosiones, supernovas y neutrinos.</li>
 </ul><h3>
 <a name="semana-8-septiembre-19" class="anchor" href="#semana-8-septiembre-19"><span class="octicon octicon-link"></span></a>(Semana 8) Septiembre 19</h3>
 
