--- a/index.html
+++ b/index.html
@@ -111,14 +111,13 @@
 <a name="semana-10-octubre-3" class="anchor" href="#semana-10-octubre-3"><span class="octicon octicon-link"></span></a>(Semana 10) Octubre 3</h3>
 
 <ul>
-<li>Ana María Montes </li>
-<li>Nicolás Plaza Bermúdez</li>
+<li>Ana María Montes. Extinciones masivas y bamboleo de la Tierra.</li>
+<li>Nicolás Plaza Bermúdez. Vida: condiciones planetarias</li>
 </ul><h3>
 <a name="semana-11-octubre-10" class="anchor" href="#semana-11-octubre-10"><span class="octicon octicon-link"></span></a>(Semana 11) Octubre 10</h3>
 
 <ul>
 <li>Andrés Peñaranda</li>
-<li>Andrés Gaona</li>
 <li>Ray Díaz</li>
 </ul><h3>
 <a name="semana-12-octubre-17" class="anchor" href="#semana-12-octubre-17"><span class="octicon octicon-link"></span></a>(Semana 12) Octubre 17</h3>
