Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 <ul>
 <li>Andrés Peñaranda</li>
-<li>Ray Díaz</li>
+<li>Ray Díaz. Medición del coeficiente de extinción atmosférica de Bogotá</li>
 </ul><h3>
 <a name="semana-12-octubre-17" class="anchor" href="#semana-12-octubre-17"><span class="octicon octicon-link"></span></a>(Semana 12) Octubre 17</h3>
 
