Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
 <ul>
 <li>Juan David Araujo</li>
 <li>Oscar Núñez Rincón</li>
+<li>Paola Castaño</li>
 </ul><h3>
 <a name="semana-13-octubre-24" class="anchor" href="#semana-13-octubre-24"><span class="octicon octicon-link"></span></a>(Semana 13) Octubre 24</h3>
 
