Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 <ul>
 <li>Andrés Mantilla</li>
 <li>Laura Ruíz</li>
+<li>Juan Carlos Burgos</li>
 </ul><h3>
 <a name="semana-15-noviembre-7" class="anchor" href="#semana-15-noviembre-7"><span class="octicon octicon-link"></span></a>(Semana 15) Noviembre 7</h3>
 
