Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -59,50 +59,66 @@
 <li>Juan Nicolás Garavito. Galaxias y el Vaticano.</li>
 <li>Jaime E. Forero-Romero. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201420/ForeroRomero_heidelberg_tallin.pdf?raw=true">Haciendo amigos en Heidelberg y Tallin</a>
 </li>
-</ul><h3>
+</ul>
+
+<h3>
 <a name="semana-2-agosto-8" class="anchor" href="#semana-2-agosto-8"><span class="octicon octicon-link"></span></a>(Semana 2) Agosto 8</h3>
 
 <ul>
 <li>Jaime E. Forero-Romero. Arte y Astronomía.</li>
 <li>Felipe Gómez. Cosmología y Galaxias en Madrid.</li>
-</ul><h3>
+</ul>
+
+<h3>
 <a name="semana-3-agosto-15" class="anchor" href="#semana-3-agosto-15"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 15</h3>
 
 <ul>
 <li>Susana Simancas. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201420/Simancas_20140815.pdf?raw=true">Space Worms! Proyecto Uniandino Aeroespacial - PUA</a>
 </li>
 <li>Manuel Quiroga. Misión espacial bonaventuriana.</li>
-</ul><h3>
+</ul>
+
+<h3>
 <a name="semana-4-agosto-22" class="anchor" href="#semana-4-agosto-22"><span class="octicon octicon-link"></span></a>(Semana 4) Agosto 22</h3>
 
 <ul>
 <li>Diego Umaña. Supernova 2014J: cálculo de la distancia a M82 y crónica de una imagen única en Colombia.</li>
-</ul><h3>
+</ul>
+
+<h3>
 <a name="semana-5-agosto-29" class="anchor" href="#semana-5-agosto-29"><span class="octicon octicon-link"></span></a>(Semana 5) Agosto 29</h3>
 
 <ul>
 <li>Diana Meléndez. Formación de sistemas planetarios: primeras etapas y teorías. </li>
 <li>Juan Sebastián Barbosa. Binarias Espectroscópicas (Delta Capricornio).</li>
-</ul><h3>
+</ul>
+
+<h3>
 <a name="semana-6-septiembre-5" class="anchor" href="#semana-6-septiembre-5"><span class="octicon octicon-link"></span></a>(Semana 6) Septiembre 5</h3>
 
 <ul>
 <li>Benjamin Oostra. Observaciones de la estrella AB Aurigae</li>
 <li>Juan Sebastián Prada.</li>
 <li>Juan Jose Flórez. </li>
-</ul><h3>
+</ul>
+
+<h3>
 <a name="semana-7-septiembre-12" class="anchor" href="#semana-7-septiembre-12"><span class="octicon octicon-link"></span></a>(Semana 7) Septiembre 12</h3>
 
 <ul>
 <li>Luisa Fernanda Rodríquez. Descubrimiento de una estrella marrón.</li>
 <li>Andrea Buitrago. El violento nacimiento de las Estrellas de Neutrones: Una historia de explosiones, supernovas y neutrinos.</li>
-</ul><h3>
+</ul>
+
+<h3>
 <a name="semana-8-septiembre-19" class="anchor" href="#semana-8-septiembre-19"><span class="octicon octicon-link"></span></a>(Semana 8) Septiembre 19</h3>
 
 <ul>
-<li>Lina Marcela Aragón</li>
-<li>Esteban Pardo</li>
-</ul><h3>
+<li>Lina Marcela Aragón.</li>
+<li>Esteban Pardo.</li>
+</ul>
+
+<h3>
 <a name="semana-9-septiembre-26" class="anchor" href="#semana-9-septiembre-26"><span class="octicon octicon-link"></span></a>(Semana 9) Septiembre 26</h3>
 
 <p><strong>Semana de trabajo individual</strong></p>
@@ -111,42 +127,50 @@
 <a name="semana-10-octubre-3" class="anchor" href="#semana-10-octubre-3"><span class="octicon octicon-link"></span></a>(Semana 10) Octubre 3</h3>
 
 <ul>
-<li>Ana María Montes. Extinciones masivas y bamboleo de la Tierra.</li>
+<li>Jaime Forero. Una carreras astronómica (resumida).</li>
 <li>Nicolás Plaza Bermúdez. Vida: condiciones planetarias</li>
-</ul><h3>
+</ul>
+
+<h3>
 <a name="semana-11-octubre-10" class="anchor" href="#semana-11-octubre-10"><span class="octicon octicon-link"></span></a>(Semana 11) Octubre 10</h3>
 
 <ul>
-<li>Andrés Peñaranda</li>
-<li>Ray Díaz. Medición del coeficiente de extinción atmosférica de Bogotá</li>
-</ul><h3>
+<li>Andrés Peñaranda. </li>
+<li>Ray Díaz. Medición del coeficiente de extinción atmosférica de Bogotá.</li>
+</ul>
+
+<h3>
 <a name="semana-12-octubre-17" class="anchor" href="#semana-12-octubre-17"><span class="octicon octicon-link"></span></a>(Semana 12) Octubre 17</h3>
 
 <ul>
-<li>Juan David Araujo</li>
-<li>Oscar Núñez Rincón</li>
-<li>Paola Castaño</li>
-</ul><h3>
+<li>Juan David Araujo. Vikingos: mito y astronomía.</li>
+</ul>
+
+<h3>
 <a name="semana-13-octubre-24" class="anchor" href="#semana-13-octubre-24"><span class="octicon octicon-link"></span></a>(Semana 13) Octubre 24</h3>
 
 <ul>
-<li>Andrés Davida Naranjo</li>
-<li>Luisa Prado</li>
-</ul><h3>
+<li>Andrés David Naranjo. La Anatomía de los Agujeros Negros.</li>
+<li>Luisa Prado. Adelanto del proyecto acerca de una estrella binaria. </li>
+<li>Ana María Montes. Extinciones masivas y bamboleo de la Tierra.</li>
+</ul>
+
+<h3>
 <a name="semana-14-octubre-31" class="anchor" href="#semana-14-octubre-31"><span class="octicon octicon-link"></span></a>(Semana 14) Octubre 31</h3>
 
 <ul>
-<li>Andrés Mantilla</li>
-<li>Laura Ruíz</li>
-<li>Juan Carlos Burgos</li>
-</ul><h3>
+<li>Juan Diego Soler (Postdoc IAS-Paris). PLANCK.</li>
+</ul>
+
+<h3>
 <a name="semana-15-noviembre-7" class="anchor" href="#semana-15-noviembre-7"><span class="octicon octicon-link"></span></a>(Semana 15) Noviembre 7</h3>
 
 <ul>
-<li>Santiago Saldarriaga</li>
-<li>David Alejandro Henríquez</li>
-<li>Tania Cifuentes</li>
-</ul><h3>
+<li>Santiago Saldarriaga. Analisis de la habitabilidad de estrellas formadas en el redshift 100&gt;=(1+z)&lt;=137</li>
+<li>Laura Ruíz. Material de outreach para ciegos (Sistema solar)</li>
+</ul>
+
+<h3>
 <a name="semana-16-noviembre-14" class="anchor" href="#semana-16-noviembre-14"><span class="octicon octicon-link"></span></a>(Semana 16) Noviembre 14</h3>
 
 <p><strong>Sesión de presentación de los posters</strong></p>
@@ -159,7 +183,10 @@
 </li>
 <li>Consejos para dar presentaciones <a href="http://www.astro.caltech.edu/%7Ejlc/ay141_winter2009/index.html">Journal Club @ Caltech</a>
 </li>
-</ul><h2>
+<li>Seminario del planetario de Bogotá. </li>
+</ul>
+
+<h2>
 <a name="formalidades" class="anchor" href="#formalidades"><span class="octicon octicon-link"></span></a>Formalidades</h2>
 
 <p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale un (1) crédito. La evaluación se divide así: 30% por asistencia y participación en clase, 30% por dar una charla y 40% por presentar en un poster los resultados de un proyecto desarrollado durante el semestre.</p>
