Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -183,7 +183,8 @@
 </li>
 <li>Consejos para dar presentaciones <a href="http://www.astro.caltech.edu/%7Ejlc/ay141_winter2009/index.html">Journal Club @ Caltech</a>
 </li>
-<li>Seminario del planetario de Bogotá. </li>
+<li>Seminario del planetario de Bogotá. <a href="http://astroseminario-planetario.weebly.com/programacioacuten.html">El espacio para hablar del espacio</a>
+</li>
 </ul>
 
 <h2>
