Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 <a name="semana-15-noviembre-7" class="anchor" href="#semana-15-noviembre-7"><span class="octicon octicon-link"></span></a>(Semana 15) Noviembre 7</h3>
 
 <ul>
-<li>Santiago Saldarriaga. Analisis de la habitabilidad de estrellas formadas en el redshift 100&gt;=(1+z)&lt;=137</li>
+<li>Santiago Saldarriaga. Analisis de la habitabilidad de estrellas formadas en el redshift 100&lt;(1+z)&lt;137</li>
 <li>Laura Ruíz. Material de outreach para ciegos (Sistema solar)</li>
 <li>David Henriquez. Fotos de la Estación Espacial Internacional.</li>
 </ul>
