Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
 
 <ul>
 <li>Juan David Araujo. Vikingos: mito y astronomía.</li>
+<li>Oscar Núñez Rincón.</li>
+<li>Paola Castaño.</li>
 </ul>
 
 <h3>
