Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -145,8 +145,7 @@
 
 <ul>
 <li>Juan David Araujo. Vikingos: mito y astronomía.</li>
-<li>Oscar Núñez Rincón.</li>
-<li>Paola Castaño.</li>
+<li>Paola Castaño. Una etnografía sobre la Estación Espacial Internacional.</li>
 </ul>
 
 <h3>
