Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
 
 <ul>
 <li>Ana María Montes. Extinciones masivas y bamboleo de la Tierra.</li>
-<li>Ray Díaz. Medición del coeficiente de extinción atmosférica de Bogotá.</li>
+<li>Ray Díaz. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201420/Diaz_20141010.pdf?raw=true">Medición del coeficiente de extinción atmosférica de Bogotá.</a>
+</li>
 <li>Andrés Peñaranda. </li>
 </ul>
 
