Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 </li>
 <li>Seminario del planetario de Bogotá. <a href="http://astroseminario-planetario.weebly.com/programacioacuten.html">El espacio para hablar del espacio</a>
 </li>
+<li><a href="http://bogota.sciencehackday.org/">Science Hack Day Bogotá</a></li>
 </ul>
 
 <h2>
