--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h2>
-<a name="astrolunch" class="anchor" href="#astrolunch"><span class="octicon octicon-link"></span></a>Astrolunch</h2>
+<a id="astrolunch" class="anchor" href="#astrolunch" aria-hidden="true"><span class="octicon octicon-link"></span></a>Astrolunch</h2>
 
 <p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. El lugar de reunión es el <strong>ML508</strong> los viernes de 1PM a 1:50PM.</p>
 
@@ -43,15 +43,15 @@
 <p>Asi que bienvenidos y ¡no olviden traer comida y cosas para compartir!</p>
 
 <h2>
-<a name="proyectos" class="anchor" href="#proyectos"><span class="octicon octicon-link"></span></a>Proyectos</h2>
+<a id="proyectos" class="anchor" href="#proyectos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Proyectos</h2>
 
 <p>Esta es la lista de proyectos disponibles: <a href="https://github.com/forero/TallerAstronomia/blob/master/projects/201420/projects.md">click</a>.</p>
 
 <h2>
-<a name="programa" class="anchor" href="#programa"><span class="octicon octicon-link"></span></a>Programa</h2>
+<a id="programa" class="anchor" href="#programa" aria-hidden="true"><span class="octicon octicon-link"></span></a>Programa</h2>
 
 <h3>
-<a name="semana-1-agosto-1" class="anchor" href="#semana-1-agosto-1"><span class="octicon octicon-link"></span></a>(Semana 1) Agosto 1</h3>
+<a id="semana-1-agosto-1" class="anchor" href="#semana-1-agosto-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 1) Agosto 1</h3>
 
 <ul>
 <li>Jaime E. Forero-Romero. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201420/ForeroRomero_intro.pdf?raw=true">¿Cómo funciona astrolunch?</a>
@@ -62,7 +62,7 @@
 </ul>
 
 <h3>
-<a name="semana-2-agosto-8" class="anchor" href="#semana-2-agosto-8"><span class="octicon octicon-link"></span></a>(Semana 2) Agosto 8</h3>
+<a id="semana-2-agosto-8" class="anchor" href="#semana-2-agosto-8" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 2) Agosto 8</h3>
 
 <ul>
 <li>Jaime E. Forero-Romero. Arte y Astronomía.</li>
@@ -70,7 +70,7 @@
 </ul>
 
 <h3>
-<a name="semana-3-agosto-15" class="anchor" href="#semana-3-agosto-15"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 15</h3>
+<a id="semana-3-agosto-15" class="anchor" href="#semana-3-agosto-15" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 3) Agosto 15</h3>
 
 <ul>
 <li>Susana Simancas. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201420/Simancas_20140815.pdf?raw=true">Space Worms! Proyecto Uniandino Aeroespacial - PUA</a>
@@ -79,14 +79,14 @@
 </ul>
 
 <h3>
-<a name="semana-4-agosto-22" class="anchor" href="#semana-4-agosto-22"><span class="octicon octicon-link"></span></a>(Semana 4) Agosto 22</h3>
+<a id="semana-4-agosto-22" class="anchor" href="#semana-4-agosto-22" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 4) Agosto 22</h3>
 
 <ul>
 <li>Diego Umaña. Supernova 2014J: cálculo de la distancia a M82 y crónica de una imagen única en Colombia.</li>
 </ul>
 
 <h3>
-<a name="semana-5-agosto-29" class="anchor" href="#semana-5-agosto-29"><span class="octicon octicon-link"></span></a>(Semana 5) Agosto 29</h3>
+<a id="semana-5-agosto-29" class="anchor" href="#semana-5-agosto-29" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 5) Agosto 29</h3>
 
 <ul>
 <li>Diana Meléndez. Formación de sistemas planetarios: primeras etapas y teorías. </li>
@@ -94,7 +94,7 @@
 </ul>
 
 <h3>
-<a name="semana-6-septiembre-5" class="anchor" href="#semana-6-septiembre-5"><span class="octicon octicon-link"></span></a>(Semana 6) Septiembre 5</h3>
+<a id="semana-6-septiembre-5" class="anchor" href="#semana-6-septiembre-5" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 6) Septiembre 5</h3>
 
 <ul>
 <li>Benjamin Oostra. Observaciones de la estrella AB Aurigae</li>
@@ -103,7 +103,7 @@
 </ul>
 
 <h3>
-<a name="semana-7-septiembre-12" class="anchor" href="#semana-7-septiembre-12"><span class="octicon octicon-link"></span></a>(Semana 7) Septiembre 12</h3>
+<a id="semana-7-septiembre-12" class="anchor" href="#semana-7-septiembre-12" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 7) Septiembre 12</h3>
 
 <ul>
 <li>Luisa Fernanda Rodríquez. Descubrimiento de una estrella marrón.</li>
@@ -111,7 +111,7 @@
 </ul>
 
 <h3>
-<a name="semana-8-septiembre-19" class="anchor" href="#semana-8-septiembre-19"><span class="octicon octicon-link"></span></a>(Semana 8) Septiembre 19</h3>
+<a id="semana-8-septiembre-19" class="anchor" href="#semana-8-septiembre-19" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 8) Septiembre 19</h3>
 
 <ul>
 <li>Lina Marcela Aragón.</li>
@@ -119,12 +119,12 @@
 </ul>
 
 <h3>
-<a name="semana-9-septiembre-26" class="anchor" href="#semana-9-septiembre-26"><span class="octicon octicon-link"></span></a>(Semana 9) Septiembre 26</h3>
+<a id="semana-9-septiembre-26" class="anchor" href="#semana-9-septiembre-26" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 9) Septiembre 26</h3>
 
 <p><strong>Semana de trabajo individual</strong></p>
 
 <h3>
-<a name="semana-10-octubre-3" class="anchor" href="#semana-10-octubre-3"><span class="octicon octicon-link"></span></a>(Semana 10) Octubre 3</h3>
+<a id="semana-10-octubre-3" class="anchor" href="#semana-10-octubre-3" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 10) Octubre 3</h3>
 
 <ul>
 <li>Jaime Forero. Una carreras astronómica (resumida).</li>
@@ -132,7 +132,7 @@
 </ul>
 
 <h3>
-<a name="semana-11-octubre-10" class="anchor" href="#semana-11-octubre-10"><span class="octicon octicon-link"></span></a>(Semana 11) Octubre 10</h3>
+<a id="semana-11-octubre-10" class="anchor" href="#semana-11-octubre-10" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 11) Octubre 10</h3>
 
 <ul>
 <li>Ana María Montes. Extinciones masivas y bamboleo de la Tierra.</li>
@@ -142,7 +142,7 @@
 </ul>
 
 <h3>
-<a name="semana-12-octubre-17" class="anchor" href="#semana-12-octubre-17"><span class="octicon octicon-link"></span></a>(Semana 12) Octubre 17</h3>
+<a id="semana-12-octubre-17" class="anchor" href="#semana-12-octubre-17" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 12) Octubre 17</h3>
 
 <ul>
 <li>Juan David Araujo. Vikingos: mito y astronomía.</li>
@@ -150,7 +150,7 @@
 </ul>
 
 <h3>
-<a name="semana-13-octubre-24" class="anchor" href="#semana-13-octubre-24"><span class="octicon octicon-link"></span></a>(Semana 13) Octubre 24</h3>
+<a id="semana-13-octubre-24" class="anchor" href="#semana-13-octubre-24" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 13) Octubre 24</h3>
 
 <ul>
 <li>Andrés David Naranjo. La Anatomía de los Agujeros Negros.</li>
@@ -159,28 +159,36 @@
 </ul>
 
 <h3>
-<a name="semana-14-octubre-31" class="anchor" href="#semana-14-octubre-31"><span class="octicon octicon-link"></span></a>(Semana 14) Octubre 31</h3>
+<a id="semana-14-octubre-31" class="anchor" href="#semana-14-octubre-31" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 14) Octubre 31</h3>
 
 <ul>
 <li>Juan Diego Soler (Postdoc IAS-Paris). PLANCK.</li>
 </ul>
 
 <h3>
-<a name="semana-15-noviembre-7" class="anchor" href="#semana-15-noviembre-7"><span class="octicon octicon-link"></span></a>(Semana 15) Noviembre 7</h3>
+<a id="semana-15-noviembre-7" class="anchor" href="#semana-15-noviembre-7" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 15) Noviembre 7</h3>
 
 <ul>
 <li>Santiago Saldarriaga. Analisis de la habitabilidad de estrellas formadas en el redshift 100&lt;(1+z)&lt;137</li>
-<li>Laura Ruíz. Material de outreach para ciegos (Sistema solar)</li>
 <li>David Henriquez. Fotos de la Estación Espacial Internacional.</li>
 </ul>
 
 <h3>
-<a name="semana-16-noviembre-14" class="anchor" href="#semana-16-noviembre-14"><span class="octicon octicon-link"></span></a>(Semana 16) Noviembre 14</h3>
+<a id="semana-16-noviembre-14" class="anchor" href="#semana-16-noviembre-14" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 16) Noviembre 14</h3>
+
+<ul>
+<li>Laura Ruíz. Material de outreach para ciegos (Sistema solar)</li>
+<li>Juan Carlos Burgos.</li>
+<li>Tania Cifuentes. </li>
+</ul>
+
+<h3>
+<a id="semana-17-noviembre-21" class="anchor" href="#semana-17-noviembre-21" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 17) Noviembre 21</h3>
 
 <p><strong>Sesión de presentación de los posters</strong></p>
 
 <h2>
-<a name="enlaces" class="anchor" href="#enlaces"><span class="octicon octicon-link"></span></a>Enlaces</h2>
+<a id="enlaces" class="anchor" href="#enlaces" aria-hidden="true"><span class="octicon octicon-link"></span></a>Enlaces</h2>
 
 <ul>
 <li>Escuela de Astronomía Observacional para Estudiantes Latinoamericanos - ESAOBELA 2015. <a href="http://www.astroscu.unam.mx/cursos/esaobela/">Inscripciones abiertas</a>
@@ -193,12 +201,12 @@
 </ul>
 
 <h2>
-<a name="formalidades" class="anchor" href="#formalidades"><span class="octicon octicon-link"></span></a>Formalidades</h2>
+<a id="formalidades" class="anchor" href="#formalidades" aria-hidden="true"><span class="octicon octicon-link"></span></a>Formalidades</h2>
 
 <p>Astrolunch es formalmente el "Taller de Astronomía", una materia ofrecida por el Departamento de Física. No tiene prerrequisitos y vale un (1) crédito. La evaluación se divide así: 30% por asistencia y participación en clase, 30% por dar una charla y 40% por presentar en un poster los resultados de un proyecto desarrollado durante el semestre.</p>
 
 <h3>
-<a name="contacto" class="anchor" href="#contacto"><span class="octicon octicon-link"></span></a>Contacto</h3>
+<a id="contacto" class="anchor" href="#contacto" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contacto</h3>
 
 <p>El Taller de Astronomía en el 2014-20 será liderado por Jaime E. Forero-Romero. Email: je.forero.</p>
       </section>
