Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <ul>
 <li>Jaime Forero.</li>
 <li>Verónica Arias.</li>
-<li>Juan Nicolás Garavito</li>
+<li>Juan Nicolás Garavito.</li>
 </ul>
 
 <h3>
@@ -69,35 +69,72 @@
 
 <ul>
 <li><strong>Elección de proyectos</strong></li>
+<li>Kevin González</li>
 </ul>
 
 <h3>
 <a id="semana-4-febrero-13" class="anchor" href="#semana-4-febrero-13" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 4) Febrero 13</h3>
 
+<ul>
+<li>Kevin Andrade</li>
+<li>Esteban Jurado</li>
+</ul>
+
 <h3>
 <a id="semana-5-febrero-20" class="anchor" href="#semana-5-febrero-20" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 5) Febrero 20</h3>
+
+<ul>
+<li>Andrés Clavijo</li>
+<li>Johan Vargas</li>
+</ul>
 
 <h3>
 <a id="semana-6-febrero-27" class="anchor" href="#semana-6-febrero-27" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 6) Febrero 27</h3>
 
+<ul>
+<li>Angélica de Dios</li>
+<li>John Ricardo EScorcia</li>
+</ul>
+
 <h3>
 <a id="semana-7-marzo-6" class="anchor" href="#semana-7-marzo-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 7) Marzo 6</h3>
+
+<ul>
+<li>Andrés Silva</li>
+<li>Juliana Muñoz</li>
+</ul>
 
 <h3>
 <a id="semana-8-marzo-13" class="anchor" href="#semana-8-marzo-13" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 8) Marzo 13</h3>
 
 <ul>
 <li><strong>Entrega de informe de avance del proyecto</strong></li>
+<li>Andrés García</li>
+<li>Cristhian Perdomo</li>
 </ul>
 
 <h3>
 <a id="semana-9-marzo-20" class="anchor" href="#semana-9-marzo-20" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 9) Marzo 20</h3>
 
+<ul>
+<li>Alejandra Moncada</li>
+<li>Juan Pablo Pérez</li>
+</ul>
+
 <h3>
 <a id="semana-10-marzo-27" class="anchor" href="#semana-10-marzo-27" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 10) Marzo 27</h3>
 
+<ul>
+<li>Mónica Barrera</li>
+<li>Maria Jose Gómez</li>
+</ul>
+
 <h3>
 <a id="semana-11-abril-10" class="anchor" href="#semana-11-abril-10" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 11) Abril 10</h3>
+
+<ul>
+<li>Juan Sebastián Andrade</li>
+</ul>
 
 <h3>
 <a id="semana-12-abril-17" class="anchor" href="#semana-12-abril-17" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 12) Abril 17</h3>
