Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -134,16 +134,31 @@
 
 <ul>
 <li>Juan Sebastián Andrade</li>
+<li>Alfonso Escobar</li>
 </ul>
 
 <h3>
 <a id="semana-12-abril-17" class="anchor" href="#semana-12-abril-17" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 12) Abril 17</h3>
 
+<ul>
+<li>Lorena Neira</li>
+<li>María Paula Rivera</li>
+</ul>
+
 <h3>
 <a id="semana-13-abril-24" class="anchor" href="#semana-13-abril-24" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 13) Abril 24</h3>
 
+<ul>
+<li>Miguel Fonseca</li>
+</ul>
+
 <h3>
 <a id="semana-14-mayo-1" class="anchor" href="#semana-14-mayo-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 14) Mayo 1</h3>
+
+<ul>
+<li>Jorge García</li>
+<li>Cristian Mauricio Borja</li>
+</ul>
 
 <h3>
 <a id="semana-15-mayo-9" class="anchor" href="#semana-15-mayo-9" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 15) Mayo 9</h3>
