Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -150,15 +150,14 @@
 
 <ul>
 <li>Miguel Fonseca</li>
+<li>Jorge García</li>
+<li>Cristian Mauricio Borja</li>
 </ul>
 
 <h3>
 <a id="semana-14-mayo-1" class="anchor" href="#semana-14-mayo-1" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 14) Mayo 1</h3>
 
-<ul>
-<li>Jorge García</li>
-<li>Cristian Mauricio Borja</li>
-</ul>
+<p><strong>Festivo</strong></p>
 
 <h3>
 <a id="semana-15-mayo-9" class="anchor" href="#semana-15-mayo-9" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 15) Mayo 9</h3>
