Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2>
 <a id="astrolunch" class="anchor" href="#astrolunch" aria-hidden="true"><span class="octicon octicon-link"></span></a>Astrolunch</h2>
 
-<p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. El lugar de reunión es el <strong>ML508</strong> los viernes de 1PM a 1:50PM.</p>
+<p>Astrolunch es el encuentro semanal de los interesados en la astronomía en la Universidad de los Andes. El lugar de reunión es el <strong>AU403</strong> los viernes de 1PM a 1:50PM.</p>
 
 <p>Hablamos de noticias astronómicas, vemos charlas de invitados y desarrollamos pequeños proyectos. Siempre procuramos presentar temas actuales de investigación de una manera accesible a un público con formación no especializada en astronomía (desde estudiantes de primer semetre de matemáticas hasta profesores en química, pasando por estudiantes de doctorado en biología).</p>
 
@@ -59,9 +59,9 @@
 <a id="semana-2-enero-30" class="anchor" href="#semana-2-enero-30" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 2) Enero 30</h3>
 
 <ul>
-<li>Jaime Forero.</li>
 <li>Verónica Arias.</li>
-<li>Juan Nicolás Garavito.</li>
+<li>Juan Nicolás Garavito. </li>
+<li>Jaime Forero. Proyectos disponibles para astrolunch.</li>
 </ul>
 
 <h3>
