Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <ul>
 <li><strong>Elección de proyectos</strong></li>
-<li>Kevin González</li>
+<li>Kevin González. 11 mil millones de años permiten la existencia del sistema planetario más antiguo del universo.</li>
 </ul>
 
 <h3>
