Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <a id="semana-2-enero-30" class="anchor" href="#semana-2-enero-30" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 2) Enero 30</h3>
 
 <ul>
-<li>Verónica Arias.</li>
-<li>Juan Nicolás Garavito. </li>
+<li>Juan Nicolás Garavito. Grupos de Galaxias.</li>
+<li>Verónica Arias. Las galaxias satélite y su extraña distribución espacial.</li>
 <li>Jaime Forero. Proyectos disponibles para astrolunch.</li>
 </ul>
 
