Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 <h2>
 <a id="proyectos" class="anchor" href="#proyectos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Proyectos</h2>
 
+<p>Esta es la <a href="https://github.com/forero/TallerAstronomia/blob/master/projects/201510/projects.md">lista de proyectos disponibles</a>.</p>
+
 <h2>
 <a id="programa" class="anchor" href="#programa" aria-hidden="true"><span class="octicon octicon-link"></span></a>Programa</h2>
 
