--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 <a id="semana-2-enero-30" class="anchor" href="#semana-2-enero-30" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 2) Enero 30</h3>
 
 <ul>
-<li>Juan Nicolás Garavito. Grupos de Galaxias.</li>
-<li>Verónica Arias. Las galaxias satélite y su extraña distribución espacial.</li>
+<li>Verónica Arias. (Las galaxias satélite y su extraña distribución espacial)[<a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201510/20150130_VeronicaArias.pdf?raw=true">https://github.com/forero/TallerAstronomia/blob/master/pdf/201510/20150130_VeronicaArias.pdf?raw=true</a>].</li>
+<li>Juan Nicolás Garavito. (Grupos de Galaxias)[<a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201510/20150130_NicolasGaravito.pdf?raw=true">https://github.com/forero/TallerAstronomia/blob/master/pdf/201510/20150130_NicolasGaravito.pdf?raw=true</a>].</li>
 <li>Jaime Forero. Proyectos disponibles para astrolunch.</li>
 </ul>
 
