--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <a id="semana-9-marzo-20" class="anchor" href="#semana-9-marzo-20" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 9) Marzo 20</h3>
 
 <ul>
-<li>Paola Castaño</li>
+<li>Paola Castaño. Comunicación Científica y Astronomía.</li>
 <li>Alejandra Moncada</li>
 <li>Juan Pablo Pérez</li>
 </ul>
