Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 <a id="semana-4-febrero-13" class="anchor" href="#semana-4-febrero-13" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 4) Febrero 13</h3>
 
 <ul>
-<li>Kevin Andrade</li>
-<li>Esteban Jurado</li>
+<li>Kevin Andrade. Astronomers Catch Mysterious Radio Blast From The Distant Universe.</li>
+<li>Esteban Jurado. </li>
 </ul>
 
 <h3>
@@ -122,7 +122,6 @@
 <ul>
 <li>Paola Castaño. Comunicación Científica y Astronomía.</li>
 <li>Alejandra Moncada</li>
-<li>Juan Pablo Pérez</li>
 </ul>
 
 <h3>
