Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -80,15 +80,14 @@
 <ul>
 <li>Kevin Andrade. Astronomers Catch Mysterious Radio Blast From The Distant Universe.</li>
 <li>Diego Umaña. Midiendo la distancia a la galaxia M82 desde Villa de Leyva.</li>
-<li>Esteban Jurado. </li>
 </ul>
 
 <h3>
 <a id="semana-5-febrero-20" class="anchor" href="#semana-5-febrero-20" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 5) Febrero 20</h3>
 
 <ul>
-<li>Johan Vargas</li>
 <li>María Andrea Martínez</li>
+<li>Jaime Forero. Astronomía Periférica: un proyecto de arte y astronomía en Bogotá.</li>
 </ul>
 
 <h3>
@@ -145,7 +144,6 @@
 <a id="semana-12-abril-17" class="anchor" href="#semana-12-abril-17" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 12) Abril 17</h3>
 
 <ul>
-<li>Lorena Neira</li>
 <li>María Paula Rivera</li>
 </ul>
 
