--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 <a id="semana-6-febrero-27" class="anchor" href="#semana-6-febrero-27" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 6) Febrero 27</h3>
 
 <ul>
-<li>Angélica de Dios</li>
-<li>John Ricardo EScorcia</li>
+<li>Angélica de Dios. New Horizons, Mission to Pluto.</li>
+<li>John Ricardo Escorcia</li>
 </ul>
 
 <h3>
@@ -120,15 +120,13 @@
 
 <ul>
 <li>Paola Castaño. Comunicación Científica y Astronomía.</li>
-<li>Alejandra Moncada</li>
 </ul>
 
 <h3>
 <a id="semana-10-marzo-27" class="anchor" href="#semana-10-marzo-27" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 10) Marzo 27</h3>
 
 <ul>
-<li>Mónica Barrera</li>
-<li>Maria Jose Gómez</li>
+<li>Mónica Barrera.</li>
 <li>Diego Herrera Téllez.</li>
 </ul>
 
