Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 <a id="semana-4-febrero-13" class="anchor" href="#semana-4-febrero-13" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 4) Febrero 13</h3>
 
 <ul>
-<li>Kevin Andrade. Astronomers Catch Mysterious Radio Blast From The Distant Universe.</li>
+<li>Kevin Andrade. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201510/20150212_KevinAndrade.pdf?raw=true">Astronomers Catch Mysterious Radio Blast From The Distant Universe.</a>
+</li>
 <li>Diego Umaña. Midiendo la distancia a la galaxia M82 desde Villa de Leyva.</li>
 </ul>
 
@@ -86,8 +87,8 @@
 <a id="semana-5-febrero-20" class="anchor" href="#semana-5-febrero-20" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 5) Febrero 20</h3>
 
 <ul>
-<li>María Andrea Martínez</li>
-<li>Jaime Forero. Astronomía Periférica: un proyecto de arte y astronomía en Bogotá.</li>
+<li>Jaime Forero. <a href="https://github.com/forero/TallerAstronomia/blob/master/pdf/201510/20150220_JaimeForero.pdf?raw=true">Astronomía Periférica: un proyecto de arte y astronomía en Bogotá.</a>
+</li>
 </ul>
 
 <h3>
@@ -95,7 +96,7 @@
 
 <ul>
 <li>Angélica de Dios. New Horizons, Mission to Pluto.</li>
-<li>John Ricardo Escorcia</li>
+<li>John Ricardo Escorcia.</li>
 </ul>
 
 <h3>
