Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
 <a id="semana-7-marzo-6" class="anchor" href="#semana-7-marzo-6" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 7) Marzo 6</h3>
 
 <ul>
-<li>Andrés Silva</li>
+<li>Jaime E. Forero-Romero. <a href="http://arxiv.org/abs/1503.01509">SETI at Planck Energy: When Particle Physicists Become Cosmic Engineers</a>
+</li>
+<li>María Camila Remolina Gutiérrez. Efectos de rotación y outflows en la línea Lyman-alpha.</li>
 </ul>
 
 <h3>
@@ -111,8 +113,8 @@
 
 <ul>
 <li><strong>Entrega de informe de avance del proyecto</strong></li>
-<li>Andrés García</li>
-<li>Cristhian Perdomo</li>
+<li>Andrés García. The fastest unbound star in our Galaxy ejected by a thermonuclear supernova.</li>
+<li>Cristhian Perdomo.</li>
 </ul>
 
 <h3>
