Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -130,7 +130,6 @@
 
 <ul>
 <li>Mónica Barrera.</li>
-<li>Diego Herrera Téllez.</li>
 </ul>
 
 <h3>
@@ -153,7 +152,6 @@
 <a id="semana-13-abril-24" class="anchor" href="#semana-13-abril-24" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 13) Abril 24</h3>
 
 <ul>
-<li>Miguel Fonseca</li>
 <li>Jorge García</li>
 <li>Cristian Mauricio Borja</li>
 </ul>
@@ -201,7 +199,7 @@
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">Astrolunch maintained by <a href="https://github.com/forero">forero</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
