--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 <a id="semana-10-marzo-27" class="anchor" href="#semana-10-marzo-27" aria-hidden="true"><span class="octicon octicon-link"></span></a>(Semana 10) Marzo 27</h3>
 
 <ul>
-<li>Mónica Barrera.</li>
+<li>Mónica Barrera. Maximum entropy detection of planets around active stars.</li>
 </ul>
 
 <h3>
